--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "mapbox-gl": "^1.12.0",
     "next": "10.0.1",
     "onchange": "^7.1.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "^2.1.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-map-gl": "^5.2.10",
+    "tailwindcss": "^1.9.6",
     "ts-jest": "^26.4.4"
   },
   "devDependencies": {
