--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
+    "purgecss": "^3.0.0",
     "typescript": "^4.0.5"
   }
 }
