--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^26.0.15",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
+    "bull": "^3.19.1",
     "eslint": "^7.13.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.15.0",
@@ -41,6 +42,7 @@
     "ts-jest": "^26.4.4"
   },
   "devDependencies": {
+    "@types/bull": "^3.14.4",
     "@types/node": "^14.14.7",
     "@types/react": "^16.9.56",
     "purgecss": "^3.0.0",
